<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/dimen_12"
    app:cardElevation="@dimen/dimen_6"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20">


        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            app:layout_constraintTop_toBottomOf="@id/layout9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_download_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/trans"
            android:drawableEnd="@drawable/ic_download"
            android:paddingEnd="40dp"
            android:background="@drawable/bg_button"
            android:paddingStart="0dp"
            android:text="@string/download_receipt"
            android:textColor="#ACABAB"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_success" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_success"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:alpha="0.4"
            android:src="@drawable/successseal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_25"
            android:text="@string/community_cash_transaction_receipt"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:src="@drawable/bkash_money_send_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_cancel"
                app:layout_constraintEnd_toEndOf="@+id/iv"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:src="@drawable/community_bank"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_close" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Jigatola, Dhanmondi,\nDhaka, Bangladesh "
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="11sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="KawranBazaar,\n Dhaka, Bangladesh"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorDivider"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/source_account_card"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                 android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txt_account_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_account_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="@dimen/text_dimen_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_source"
                app:layout_constraintTop_toTopOf="parent"
                android:text="00103000004201" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_amount"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="BDT 25000.00" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout4">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transaction_date_time"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_transaction_date_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_transaction_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_date"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2023-03-02 06:33:00" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout5">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_narration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_narration"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_narration"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_narration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_narration"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="To Bkash" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorDivider"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout6">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transaction_info"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="14sp"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout7">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_account_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_dest_account_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_dest_account_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="01878036425" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/layout8">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_ref_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reference_no"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_ref_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_ref_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_ref_no"
                app:layout_constraintTop_toTopOf="parent"
                android:text="TNX1222" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/v1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAlignment="textStart"
                android:textColor="@color/black_gray"
                android:textSize="@dimen/text_dimen_12"
                app:layout_constraintEnd_toStartOf="@id/txt_total_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_total_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/label_total"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="BDT 25000.00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
